--- a/view/template/informacao/css/main.css
+++ b/view/template/informacao/css/main.css
@@ -90,6 +90,38 @@ a{
     text-transform: lowercase;
 
 }
+div.paginacao {
+  width: 100%;
+  height: 12%;
+  background-color: var(--backgroundTheme);
+  justify-content: space-evenly;
+  align-items: center;
+  user-select: none;
+}
+
+div.paginacao h1 {
+
+  cursor: pointer;
+
+}
+
+div.paginacao a {
+  padding: 1vw 2vw;
+  color: white;
+  background-color: var(--Effect);
+  box-shadow: rgba(0, 0, 0, 0.89) 0.1vw 0.1vw 0.2vw 0.1vw;
+  text-shadow: 0.1vw 0.1vw #000000;
+  transition: ease-in-out 0.2s;
+}
+
+div.paginacao a.marcado {
+  background-color: var(--Effect2);
+
+}
+
+div.paginacao a:hover {
+  background-color: var(--Effect3);
+}
 .slide-out {
 	animation: slide-out-elliptic-left-bck 0.7s ease-in both;
 }
