--- a/view/template/informacao/css/add/style.css
+++ b/view/template/informacao/css/add/style.css
@@ -1,124 +1,162 @@
-h1.textShadow.title{
+h1.textShadow.title {
     text-shadow: 0.1vw 0vw #ffffff;
 
 }
-h1.title{
+
+h1.title {
     text-transform: capitalize;
     font-weight: 100;
     background-color: white;
 }
-h1.title > b{
+
+h1.title>b {
     text-transform: uppercase;
 }
 
-div.menulinks small{
-    
+div.menulinks small {
+
     text-align: center;
-  
+
 
 }
-div.menulinks small a{
+
+div.menulinks small a {
     width: 100%;
-    display:block;
-    padding:0.25vw;
-    color:black;
+    display: block;
+    padding: 0.25vw;
+    color: black;
     font-weight: 100;
 }
-div.menulinks small a i{
 
-    
-    padding:0.30vw 0.35vw;
+div.menulinks small a i {
+
+
+    padding: 0.30vw 0.35vw;
     border-radius: 100%;
     text-align: center;
 }
-div.menulinks small:hover{
+
+div.menulinks small:hover {
     background-color: rgba(0, 0, 0, 0.692);
     transition: ease-in-out 0.2s;
 
 }
-div.menulinks small:hover > a{
-    color:white;
+
+div.menulinks small:hover>a {
+    color: white;
     transition: ease-in-out 0.2s;
 }
-div.menulinks small:hover > a > i{
-    color:white;
+
+div.menulinks small:hover>a>i {
+    color: white;
     transition: ease-in-out 0.2s;
 
 }
-div.menulinks small.delete:hover > a > i{
+
+div.menulinks small.delete:hover>a {
     background-color: var(--cancelTheme);
-    
-    
+
+
 }
-div.menulinks small.home:hover > a > i{
+
+div.menulinks small.home:hover>a {
     background-color: var(--trueTheme);
-    
+
 }
-div.menulinks small.add:hover > a > i{
+
+div.menulinks small.add:hover>a {
     background-color: var(--fontTheme);
-    
+
 }
 
-div.adicionarInformacaoWrapper{
-    background-color: var(--Effect);
-    height: 70%;
+div.adicionarInformacaoWrapper {
+    background-color: var(--Effect3);
+    height: 73%;
 }
 
-div.informacaoWrapper{
+div.informacaoWrapper {
 
-    height: calc(100% / 6 );
+    height: calc(100% / 6);
     flex-flow: column nowrap;
     padding: 0 1%;
- 
+
 }
 
-div.informacaoWrapper input{
+div.informacaoWrapper input {
     padding: 0.5%;
-    border:0;
-    outline:0;
+    border: 0;
+    outline: 0;
+    transition: ease-in-out;
+}
+
+div.informacaoWrapper input:hover{
+    background-color: #c9c9c9;
+}
+div.informacaoWrapper input:focus{
+    background-color: #c9c9c9;
+}
+
+div.adicionarInformacaoWrapper div.inputQuantidade {
+    background-color: var(--Effect2);
+    padding: 0.25vw;
 
 }
-div.adicionarInformacaoWrapper div.inputQuantidade{
-    background-color: var(--Effect2);
-    padding:0.25vw;
-    
-}
-div.inputQuantidade small{
-    padding:0.2%;
+
+div.inputQuantidade small {
+    padding: 0.2%;
     user-select: none;
     cursor: pointer;
-    color:white;
+    color: white;
 }
-div.inputQuantidade input{
+
+div.inputQuantidade input {
     width: 80%;
     padding: 0.25vw;
-    border:0;
-    outline:0;
+    border: 0;
+    outline: 0;
 }
 
-div.listInput{
+div.listInput {
     height: 87%;
 }
-div.listInput form{
+
+div.listInput form {
     height: 100%;
 }
-div.listInput label{
-    color:white;
+
+div.listInput label {
+    color: black;
 }
-div.buttonWrapp{
+
+div.buttonWrapp {
     align-items: center;
     justify-content: center;
-}
-div.buttonWrapp btn{
-    color:white;
-    text-align: center;
-    background-color: red;
-    height: 100%;
-}
-div.buttonWrapp btn.Cancelar h3{
-    color:white;
 
 }
-div.buttonWrapp btn.Salvar h3{
-    color:white;
+
+div.buttonWrapp div.btn {
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    height: 100%;
+    padding: 0.5%;
+    transition: ease-in-out 0.2s;
+}
+
+div.buttonWrapp div.btn.Cancelar h3 {
+    background-color: var(--cancelTheme);
+}
+
+div.buttonWrapp div.btn.Salvar h3 {
+    background-color: var(--trueTheme);
+}
+
+div.buttonWrapp div.btn.Cancelar h3:hover {
+    background-color: var(--cancelTheme2);
+    scale: 102%;
+}
+
+div.buttonWrapp div.btn.Salvar h3:hover {
+    background-color: var(--trueTheme2);
+    scale: 102%;
 }
